--- a/simulador.html
+++ b/simulador.html
@@ -58,92 +58,122 @@
 
     <main>
         <div id="container">
-            <div id="processador">
-                <img src="./resources/images/processador-simulador.png" alt="Imagem de um processador" width="50px"
-                    height="50px">
-                <p>Processador</p>
-                <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px"
-                    height="30px">
+            <nav class="menu-simulador">
+                <div id="processador">
+                    <img src="./resources/images/processador-simulador.png" alt="Imagem de um processador" width="50px"
+                        height="50px">
+                    <p>Processador</p>
+                    <ul>
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
+                                width="30px" height="30px">
+                            <ul class="lista-simulador">
+                                <li id="processador1"></li>
+                                <li id="processador2"></li>
+                                <li id="processador3"></li>
+                                <li id="processador4"></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
 
-            </div>
-            <ul class="lista-simulador">
-                <li id="processador1"></li>
-                <li id="processador2"></li>
-                <li id="processador3"></li>
-                <li id="processador4"></li>
-            </ul>
-            <div id="processador">
-                <img src="./resources/images/placa-video-simulador.png" alt="Imagem de uma placa de vídeo">
-                <p>Placa de vídeo</p>
-                <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px"
-                    height="30px">
+                <div id="processador">
+                    <img src="./resources/images/placa-video-simulador.png" alt="Imagem de uma placa de vídeo">
+                    <p>Placa de vídeo</p>
+                    <ul>
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
+                                width="30px" height="30px">
+                            <ul class="lista-simulador">
+                                <li id="placa_video1"></li>
+                                <li id="placa_video2"></li>
+                                <li id="placa_video3"></li>
+                                <li id="placa_video4"></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
 
-            </div>
-            <ul class="lista-simulador">
-                <li id="placa_video1"></li>
-                <li id="placa_video2"></li>
-                <li id="placa_video3"></li>
-                <li id="placa_video4"></li>
-            </ul>
-            <div id="processador">
-                <img src="./resources/images/placa-mae-simulador.png" alt="Imagem de uma placa mãe">
-                <p>Placa mãe</p>
-                <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px"
-                    height="30px">
+                <div id="processador">
+                    <img src="./resources/images/placa-mae-simulador.png" alt="Imagem de uma placa mãe">
+                    <p>Placa mãe</p>
+                    <ul>
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
+                                width="30px" height="30px">
+                            <ul class="lista-simulador">
+                                <li id="placa_mae1"></li>
+                                <li id="placa_mae2"></li>
+                                <li id="placa_mae3"></li>
+                                <li id="placa_mae4"></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
 
-            </div>
-            <ul class="lista-simulador">
-                <li id="placa_mae1"></li>
-                <li id="placa_mae2"></li>
-                <li id="placa_mae3"></li>
-                <li id="placa_mae4"></li>
-            </ul>
-            <div id="processador">
-                <img src="./resources/images/memoriaram-simulador.png" alt="Imagem de uma memória RAM">
-                <p>Memória RAM</p>
-                <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px"
-                    height="30px">
+                <div id="processador">
+                    <img src="./resources/images/memoriaram-simulador.png" alt="Imagem de uma memória RAM">
+                    <p>Memória RAM</p>
+                    <ul>
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
+                                width="30px" height="30px">
+                            <ul class="lista-simulador">
+                                <li id="memoria_ram1"></li>
+                                <li id="memoria_ram2"></li>
+                                <li id="memoria_ram3"></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
 
-            </div>
-            <ul class="lista-simulador">
-                <li id="memoria_ram1"></li>
-                <li id="memoria_ram2"></li>
-                <li id="memoria_ram3"></li>
-            </ul>
-            <div id="processador">
-                <img src="./resources/images/hd-simulador.png" alt="Imagem de um HD">
-                <p>HD</p>
-                <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px"
-                    height="30px">
+                <div id="processador">
+                    <img src="./resources/images/hd-simulador.png" alt="Imagem de um HD">
+                    <p>HD</p>
+                    <ul>
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
+                                width="30px" height="30px">
+                            <ul class="lista-simulador">
+                                <li id="hd1"></li>
+                                <li id="hd2"></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
 
-            </div>
-            <ul class="lista-simulador">
-                <li id="hd1"></li>
-                <li id="hd2"></li>
-            </ul>
-            <div id="processador">
-                <img src="./resources/images/ssd-simulador.png" alt="Imagem de um SSD">
-                <p>SSD</p>
-                <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px"
-                    height="30px">
+                <div id="processador">
+                    <img src="./resources/images/ssd-simulador.png" alt="Imagem de um SSD">
+                    <p>SSD</p>
+                    <ul>
+                        <li class="imagem-seta"> <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
+                                width="30px" height="30px">
+                            <ul class="lista-simulador">
+                                <li id="ssd1"></li>
+                                <li id="ssd2"></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
 
-            </div>
-            <ul class="lista-simulador">
-                <li id="ssd1"></li>
-                <li id="ssd2"></li>
-            </ul>
-            <div id="processador">
-                <img src="./resources/images/fonte-simulador.png" alt="Imagem de uma fonte">
-                <p>Fonte</p>
-                <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px"
-                    height="30px">
-            </div>
-            <ul class="lista-simulador active">
-                <li id="fontes1"></li>
-                <li id="fontes2"></li>
-            </ul>
+                <div id="processador">
+                    <img src="./resources/images/fonte-simulador.png" alt="Imagem de uma fonte">
+                    <p>Fonte</p>
+                    <ul>
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
+                                width="30px" height="30px">
+                            <ul class="lista-simulador active">
+                                <li id="fontes1"></li>
+                                <li id="fontes2"></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+
+        <div class="total">
+            <p id="texto-total">TOTAL</p>
+            <div id="divisao"></div>
+            <p></p>
         </div>
     </main>
+
 
     <script src="./resources/js/simulador.js"></script>
 </body>
