replace das pecas

--- a/simulador.html
+++ b/simulador.html
@@ -62,15 +62,23 @@
                 <div id="processador">
                     <img src="./resources/images/processador-simulador.png" alt="Imagem de um processador" width="50px"
                         height="50px">
-                    <p>Processador</p>
+                    <p id="replace-processador">Processador</p>
                     <ul>
-                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
-                                width="30px" height="30px">
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
+                                alt="Imagem de uma seta para baixo" width="30px" height="30px">
                             <ul class="lista-simulador">
-                                <li id="processador1"></li>
-                                <li id="processador2"></li>
-                                <li id="processador3"></li>
-                                <li id="processador4"></li>
+                                <a  href="#">
+                                    <li onclick="Processador1()" id="processador1"></li>
+                                </a>
+                                <a href="#">
+                                    <li onclick="Processador2()" id="processador2"></li>
+                                </a>
+                                <a href="#">
+                                    <li onclick="Processador3()" id="processador3"></li>
+                                </a>
+                                <a href="#">
+                                    <li onclick="Processador4()" id="processador4"></li>
+                                </a>
                             </ul>
                         </li>
                     </ul>
@@ -80,13 +88,21 @@
                     <img src="./resources/images/placa-video-simulador.png" alt="Imagem de uma placa de vídeo">
                     <p>Placa de vídeo</p>
                     <ul>
-                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
-                                width="30px" height="30px">
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
+                                alt="Imagem de uma seta para baixo" width="30px" height="30px">
                             <ul class="lista-simulador">
-                                <li id="placa_video1"></li>
-                                <li id="placa_video2"></li>
-                                <li id="placa_video3"></li>
-                                <li id="placa_video4"></li>
+                                <a href="#">
+                                    <li id="placa_video1"></li>
+                                </a>
+                                <a href="#">
+                                    <li id="placa_video2"></li>
+                                </a>
+                                <a href="#">
+                                    <li id="placa_video3"></li>
+                                </a>
+                                <a href="#">
+                                    <li id="placa_video4"></li>
+                                </a>
                             </ul>
                         </li>
                     </ul>
@@ -96,13 +112,21 @@
                     <img src="./resources/images/placa-mae-simulador.png" alt="Imagem de uma placa mãe">
                     <p>Placa mãe</p>
                     <ul>
-                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
-                                width="30px" height="30px">
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
+                                alt="Imagem de uma seta para baixo" width="30px" height="30px">
                             <ul class="lista-simulador">
-                                <li id="placa_mae1"></li>
-                                <li id="placa_mae2"></li>
-                                <li id="placa_mae3"></li>
-                                <li id="placa_mae4"></li>
+                                <a href="#">
+                                    <li id="placa_mae1"></li>
+                                </a>
+                                <a href="#">
+                                    <li id="placa_mae2"></li>
+                                </a>
+                                <a href="#">
+                                    <li id="placa_mae3"></li>
+                                </a>
+                                <a href="#">
+                                    <li id="placa_mae4"></li>
+                                </a>
                             </ul>
                         </li>
                     </ul>
@@ -112,12 +136,18 @@
                     <img src="./resources/images/memoriaram-simulador.png" alt="Imagem de uma memória RAM">
                     <p>Memória RAM</p>
                     <ul>
-                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
-                                width="30px" height="30px">
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
+                                alt="Imagem de uma seta para baixo" width="30px" height="30px">
                             <ul class="lista-simulador">
-                                <li id="memoria_ram1"></li>
-                                <li id="memoria_ram2"></li>
-                                <li id="memoria_ram3"></li>
+                                <a href="#">
+                                    <li id="memoria_ram1"></li>
+                                </a>
+                                <a href="#">
+                                    <li id="memoria_ram2"></li>
+                                </a>
+                                <a href="#">
+                                    <li id="memoria_ram3"></li>
+                                </a>
                             </ul>
                         </li>
                     </ul>
@@ -127,11 +157,15 @@
                     <img src="./resources/images/hd-simulador.png" alt="Imagem de um HD">
                     <p>HD</p>
                     <ul>
-                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
-                                width="30px" height="30px">
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
+                                alt="Imagem de uma seta para baixo" width="30px" height="30px">
                             <ul class="lista-simulador">
-                                <li id="hd1"></li>
-                                <li id="hd2"></li>
+                                <a href="#">
+                                    <li id="hd1"></li>
+                                </a>
+                                <a href="#">
+                                    <li id="hd2"></li>
+                                </a>
                             </ul>
                         </li>
                     </ul>
@@ -141,11 +175,15 @@
                     <img src="./resources/images/ssd-simulador.png" alt="Imagem de um SSD">
                     <p>SSD</p>
                     <ul>
-                        <li class="imagem-seta"> <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
-                                width="30px" height="30px">
+                        <li class="imagem-seta"> <img src="./resources/images/down-arrow.png"
+                                alt="Imagem de uma seta para baixo" width="30px" height="30px">
                             <ul class="lista-simulador">
-                                <li id="ssd1"></li>
-                                <li id="ssd2"></li>
+                                <a href="#">
+                                    <li id="ssd1"></li>
+                                </a>
+                                <a href="#">
+                                    <li id="ssd2"></li>
+                                </a>
                             </ul>
                         </li>
                     </ul>
@@ -155,11 +193,15 @@
                     <img src="./resources/images/fonte-simulador.png" alt="Imagem de uma fonte">
                     <p>Fonte</p>
                     <ul>
-                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
-                                width="30px" height="30px">
-                            <ul class="lista-simulador active">
-                                <li id="fontes1"></li>
-                                <li id="fontes2"></li>
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
+                                alt="Imagem de uma seta para baixo" width="30px" height="30px">
+                            <ul class="lista-simulador">
+                                <a href="#">
+                                    <li id="fontes1"></li>
+                                </a>
+                                <a href="#">
+                                    <li id="fontes2"></li>
+                                </a>
                             </ul>
                         </li>
                     </ul>
@@ -170,7 +212,7 @@
         <div class="total">
             <p id="texto-total">TOTAL</p>
             <div id="divisao"></div>
-            <p></p>
+            <p id="preco"></p>
         </div>
     </main>
 
