--- a/simulador.html
+++ b/simulador.html
@@ -66,12 +66,7 @@
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
                                 width="30px" height="30px">
-                            <ul class="lista-simulador">
-                                <li id="processador1"></li>
-                                <li id="processador2"></li>
-                                <li id="processador3"></li>
-                                <li id="processador4"></li>
-                            </ul>
+                            <ul id="lista_processador" class=lista-simulador></ul>
                         </li>
                     </ul>
                 </div>
@@ -82,12 +77,7 @@
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
                                 width="30px" height="30px">
-                            <ul class="lista-simulador">
-                                <li id="placa_video1"></li>
-                                <li id="placa_video2"></li>
-                                <li id="placa_video3"></li>
-                                <li id="placa_video4"></li>
-                            </ul>
+                            <ul id="lista_placa_video" class="lista-simulador"></ul>
                         </li>
                     </ul>
                 </div>
@@ -98,12 +88,7 @@
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
                                 width="30px" height="30px">
-                            <ul class="lista-simulador">
-                                <li id="placa_mae1"></li>
-                                <li id="placa_mae2"></li>
-                                <li id="placa_mae3"></li>
-                                <li id="placa_mae4"></li>
-                            </ul>
+                            <ul id="lista_placa_mae" class="lista-simulador"></ul>
                         </li>
                     </ul>
                 </div>
@@ -114,11 +99,7 @@
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
                                 width="30px" height="30px">
-                            <ul class="lista-simulador">
-                                <li id="memoria_ram1"></li>
-                                <li id="memoria_ram2"></li>
-                                <li id="memoria_ram3"></li>
-                            </ul>
+                            <ul id="lista_ram" class="lista-simulador"></ul>
                         </li>
                     </ul>
                 </div>
@@ -129,7 +110,7 @@
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
                                 width="30px" height="30px">
-                            <ul class="lista-simulador">
+                            <ul id="lista_hd" class="lista-simulador">
                                 <li id="hd1"></li>
                                 <li id="hd2"></li>
                             </ul>
@@ -143,7 +124,7 @@
                     <ul>
                         <li class="imagem-seta"> <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
                                 width="30px" height="30px">
-                            <ul class="lista-simulador">
+                            <ul id="lista_ssd" class="lista-simulador">
                                 <li id="ssd1"></li>
                                 <li id="ssd2"></li>
                             </ul>
@@ -157,10 +138,7 @@
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
                                 width="30px" height="30px">
-                            <ul class="lista-simulador active">
-                                <li id="fontes1"></li>
-                                <li id="fontes2"></li>
-                            </ul>
+                            <ul id="lista_fonte" class="lista-simulador"></ul>
                         </li>
                     </ul>
                 </div>
