--- a/simulador.html
+++ b/simulador.html
@@ -110,10 +110,7 @@
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
                                 width="30px" height="30px">
-                            <ul id="lista_hd" class="lista-simulador">
-                                <li id="hd1"></li>
-                                <li id="hd2"></li>
-                            </ul>
+                            <ul id="lista_hd" class="lista-simulador"></ul>
                         </li>
                     </ul>
                 </div>
@@ -124,10 +121,7 @@
                     <ul>
                         <li class="imagem-seta"> <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
                                 width="30px" height="30px">
-                            <ul id="lista_ssd" class="lista-simulador">
-                                <li id="ssd1"></li>
-                                <li id="ssd2"></li>
-                            </ul>
+                            <ul id="lista_ssd" class="lista-simulador"></ul>
                         </li>
                     </ul>
                 </div>
