--- a/simulador.html
+++ b/simulador.html
@@ -48,8 +48,6 @@
                 </datalist>
             </div>
         </div>
-
-        </div>
     </header>
 
     <div id="title">
@@ -64,8 +62,8 @@
                         height="50px">
                     <p>Processador</p>
                     <ul>
-                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
-                                width="30px" height="30px">
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
+                                alt="Imagem de uma seta para baixo" width="30px" height="30px">
                             <ul id="lista_processador" class=lista-simulador></ul>
                         </li>
                     </ul>
@@ -75,8 +73,8 @@
                     <img src="./resources/images/placa-video-simulador.png" alt="Imagem de uma placa de vídeo">
                     <p>Placa de vídeo</p>
                     <ul>
-                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
-                                width="30px" height="30px">
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
+                                alt="Imagem de uma seta para baixo" width="30px" height="30px">
                             <ul id="lista_placa_video" class="lista-simulador"></ul>
                         </li>
                     </ul>
@@ -86,8 +84,8 @@
                     <img src="./resources/images/placa-mae-simulador.png" alt="Imagem de uma placa mãe">
                     <p>Placa mãe</p>
                     <ul>
-                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
-                                width="30px" height="30px">
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
+                                alt="Imagem de uma seta para baixo" width="30px" height="30px">
                             <ul id="lista_placa_mae" class="lista-simulador"></ul>
                         </li>
                     </ul>
@@ -97,8 +95,8 @@
                     <img src="./resources/images/memoriaram-simulador.png" alt="Imagem de uma memória RAM">
                     <p>Memória RAM</p>
                     <ul>
-                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
-                                width="30px" height="30px">
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
+                                alt="Imagem de uma seta para baixo" width="30px" height="30px">
                             <ul id="lista_ram" class="lista-simulador"></ul>
                         </li>
                     </ul>
@@ -108,8 +106,8 @@
                     <img src="./resources/images/hd-simulador.png" alt="Imagem de um HD">
                     <p>HD</p>
                     <ul>
-                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
-                                width="30px" height="30px">
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
+                                alt="Imagem de uma seta para baixo" width="30px" height="30px">
                             <ul id="lista_hd" class="lista-simulador"></ul>
                         </li>
                     </ul>
@@ -119,8 +117,8 @@
                     <img src="./resources/images/ssd-simulador.png" alt="Imagem de um SSD">
                     <p>SSD</p>
                     <ul>
-                        <li class="imagem-seta"> <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
-                                width="30px" height="30px">
+                        <li class="imagem-seta"> <img src="./resources/images/down-arrow.png"
+                                alt="Imagem de uma seta para baixo" width="30px" height="30px">
                             <ul id="lista_ssd" class="lista-simulador"></ul>
                         </li>
                     </ul>
@@ -130,8 +128,8 @@
                     <img src="./resources/images/fonte-simulador.png" alt="Imagem de uma fonte">
                     <p>Fonte</p>
                     <ul>
-                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo"
-                                width="30px" height="30px">
+                        <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
+                                alt="Imagem de uma seta para baixo" width="30px" height="30px">
                             <ul id="lista_fonte" class="lista-simulador"></ul>
                         </li>
                     </ul>
