add: price in total

--- a/simulador.html
+++ b/simulador.html
@@ -140,7 +140,7 @@
         <div class="total">
             <p id="texto-total">TOTAL</p>
             <div id="divisao"></div>
-            <p></p>
+            <p id="preco">R$ 0.00</p>
         </div>
     </main>
     <script src="./resources/js/simulador.js"></script>
