--- a/simulador.html
+++ b/simulador.html
@@ -60,7 +60,7 @@
                 <div id="processador">
                     <img src="./resources/images/processador-simulador.png" alt="Imagem de um processador" width="50px"
                         height="50px">
-                    <p>Processador</p>
+                    <p id="replace">Processador</p>
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
                                 alt="Imagem de uma seta para baixo" width="30px" height="30px">
@@ -71,7 +71,7 @@
 
                 <div id="processador">
                     <img src="./resources/images/placa-video-simulador.png" alt="Imagem de uma placa de vídeo">
-                    <p>Placa de vídeo</p>
+                    <p id="replace">Placa de vídeo</p>
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
                                 alt="Imagem de uma seta para baixo" width="30px" height="30px">
@@ -82,7 +82,7 @@
 
                 <div id="processador">
                     <img src="./resources/images/placa-mae-simulador.png" alt="Imagem de uma placa mãe">
-                    <p>Placa mãe</p>
+                    <p id="replace">Placa mãe</p>
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
                                 alt="Imagem de uma seta para baixo" width="30px" height="30px">
@@ -93,7 +93,7 @@
 
                 <div id="processador">
                     <img src="./resources/images/memoriaram-simulador.png" alt="Imagem de uma memória RAM">
-                    <p>Memória RAM</p>
+                    <p id="replace">Memória RAM</p>
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
                                 alt="Imagem de uma seta para baixo" width="30px" height="30px">
@@ -104,7 +104,7 @@
 
                 <div id="processador">
                     <img src="./resources/images/hd-simulador.png" alt="Imagem de um HD">
-                    <p>HD</p>
+                    <p id="replace">HD</p>
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
                                 alt="Imagem de uma seta para baixo" width="30px" height="30px">
@@ -115,7 +115,7 @@
 
                 <div id="processador">
                     <img src="./resources/images/ssd-simulador.png" alt="Imagem de um SSD">
-                    <p>SSD</p>
+                    <p id="replace">SSD</p>
                     <ul>
                         <li class="imagem-seta"> <img src="./resources/images/down-arrow.png"
                                 alt="Imagem de uma seta para baixo" width="30px" height="30px">
@@ -126,7 +126,7 @@
 
                 <div id="processador">
                     <img src="./resources/images/fonte-simulador.png" alt="Imagem de uma fonte">
-                    <p>Fonte</p>
+                    <p id="replace">Fonte</p>
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
                                 alt="Imagem de uma seta para baixo" width="30px" height="30px">
@@ -137,10 +137,12 @@
             </nav>
         </div>
 
-        <div class="total">
-            <p id="texto-total">TOTAL</p>
-            <div id="divisao"></div>
-            <p id="preco">R$ 0.00</p>
+        <div id="total-container">
+            <div class="total">
+                <p id="texto-total">TOTAL</p>
+                <div id="divisao"></div>
+                <p id="preco">R$ 0.00</p>
+            </div>
         </div>
     </main>
     <script src="./resources/js/simulador.js"></script>
