add: change dropdown name

--- a/simulador.html
+++ b/simulador.html
@@ -60,7 +60,7 @@
                 <div id="processador">
                     <img src="./resources/images/processador-simulador.png" alt="Imagem de um processador" width="50px"
                         height="50px">
-                    <p id="replace">Processador</p>
+                    <p id="replace_processador">Processador</p>
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
                                 alt="Imagem de uma seta para baixo" width="30px" height="30px">
@@ -71,7 +71,7 @@
 
                 <div id="processador">
                     <img src="./resources/images/placa-video-simulador.png" alt="Imagem de uma placa de vídeo">
-                    <p id="replace">Placa de vídeo</p>
+                    <p id="replace_placa_video">Placa de vídeo</p>
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
                                 alt="Imagem de uma seta para baixo" width="30px" height="30px">
@@ -82,7 +82,7 @@
 
                 <div id="processador">
                     <img src="./resources/images/placa-mae-simulador.png" alt="Imagem de uma placa mãe">
-                    <p id="replace">Placa mãe</p>
+                    <p id="replace_placa_mae">Placa mãe</p>
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
                                 alt="Imagem de uma seta para baixo" width="30px" height="30px">
@@ -93,7 +93,7 @@
 
                 <div id="processador">
                     <img src="./resources/images/memoriaram-simulador.png" alt="Imagem de uma memória RAM">
-                    <p id="replace">Memória RAM</p>
+                    <p id="replace_ram">Memória RAM</p>
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
                                 alt="Imagem de uma seta para baixo" width="30px" height="30px">
@@ -104,7 +104,7 @@
 
                 <div id="processador">
                     <img src="./resources/images/hd-simulador.png" alt="Imagem de um HD">
-                    <p id="replace">HD</p>
+                    <p id="replace_hd">HD</p>
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
                                 alt="Imagem de uma seta para baixo" width="30px" height="30px">
@@ -115,7 +115,7 @@
 
                 <div id="processador">
                     <img src="./resources/images/ssd-simulador.png" alt="Imagem de um SSD">
-                    <p id="replace">SSD</p>
+                    <p id="replace_ssd">SSD</p>
                     <ul>
                         <li class="imagem-seta"> <img src="./resources/images/down-arrow.png"
                                 alt="Imagem de uma seta para baixo" width="30px" height="30px">
@@ -126,7 +126,7 @@
 
                 <div id="processador">
                     <img src="./resources/images/fonte-simulador.png" alt="Imagem de uma fonte">
-                    <p id="replace">Fonte</p>
+                    <p id="replace_fonte">Fonte</p>
                     <ul>
                         <li class="imagem-seta"><img src="./resources/images/down-arrow.png"
                                 alt="Imagem de uma seta para baixo" width="30px" height="30px">
