2 parte do simulador

--- a/simulador.html
+++ b/simulador.html
@@ -144,6 +144,23 @@
                 <p id="preco">R$ 0.00</p>
             </div>
         </div>
+
+        <section>
+            <div id="montar-final">
+                <a id="botao-montar">Montar</a>
+            </div>
+        </section>
+
+        <section>
+            <div id="informacoes-extras">
+                <h3>Informações extras</h3>
+                <div id="container-informacoes">
+                    <p id="probabilidade">asdasd</p>
+                    <p id="sistema-operacional">dasdsa</p>
+                    <p id="internet">dasdsa</p>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="./resources/js/simulador.js"></script>
 </body>
