simulador semipronto correcao

--- a/simulador.html
+++ b/simulador.html
@@ -151,7 +151,7 @@
             </div>
         </section>
 
-        <p id="texto-obs">Obs.: A informação extra só aparecerá após escolher as peças e clicar em montar.</p>
+        <p id="texto-obs">Obs.: As informações extras só apareceram após escolher todas as peças (com exceção do HD e SSD) e clicar em montar.</p>
         <section>
             <div id="informacoes-extras">
                 <h3>Informações extras</h3>
